Fix `CurrencyInput` height & gap (#526)

--- a/packages/react/src/components/CurrencyInput/CurrencyInput.css
+++ b/packages/react/src/components/CurrencyInput/CurrencyInput.css
@@ -5,5 +5,7 @@
     font-size: var(--h-detail-text-3xl-font-size);
     line-height: var(--h-detail-text-3xl-line-height);
     letter-spacing: var(--h-detail-text-3xl-letter-spacing);
+    gap: var(--h-input-currency-gap);
+    height: var(--h-input-currency-height);
   }
 }
