--- a/packages/react/src/components/TextInput/TextInput.css
+++ b/packages/react/src/components/TextInput/TextInput.css
@@ -15,7 +15,7 @@
     line-height: var(--h-line-height-500);
     font-style: normal;
     text-align: start;
-    height: 48px;
+    height: var(--h-input-height);
     min-width: var(--h-input-min-width);
     max-width: var(--h-input-max-width);
     padding-inline: var(--h-input-padding-horizontal);
